--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -133,6 +133,12 @@ img.medium {
 .card .toolkit {
   cursor: pointer;
 }
+.rating-text {
+  display: inline-block;
+  font-size: 12px;
+  margin: 3px 7px;
+  text-shadow: 0 0 2px black;
+}
 .card .toolkit i.heart {
   color: #ff0047;
 }
@@ -152,7 +158,7 @@ img.medium {
   text-align: center;
   padding: 0;
   margin: 0;
-  color: #ff0047;
+  color: #fff;
   position: absolute;
   top: -46px;
   left: 10px;
@@ -171,8 +177,7 @@ img.medium {
   align-items: flex-start;
 }
 .stars--div i.fa-star {
-  /* background-color: blue; */
-  text-shadow: 0 0 2px white;
+  text-shadow: 0 0 2px black;
 }
 .restaurant {
   font-size: 14px;
@@ -192,4 +197,73 @@ span.badge {
   padding: 1px 3px;
   border-radius: 4px;
   letter-spacing: 1px;
+}
+.loading {
+  display: flex;
+  height: 415px;
+  flex-direction: column;
+  justify-content: space-between;
+
+  min-height: 20px;
+  overflow: hidden;
+}
+
+.loading > div {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(90deg, #0000, #0000001a, #0000);
+  animation: loading 1s linear infinite forwards;
+  opacity: 0;
+  background-repeat: no-repeat;
+}
+.loading div.img {
+  height: 60%;
+}
+.loading div.name {
+  height: 10%;
+  width: 60%;
+  margin: auto;
+  border-radius: 20px;
+}
+.loading div.toolskit {
+  height: 10%;
+  width: 90%;
+  margin: auto;
+  border-radius: 5px;
+}
+.loading div.price {
+  width: 60%;
+  height: 30px;
+  border-radius: 5px;
+}
+.loading > div:nth-child(2) {
+  animation-delay: 200ms;
+}
+.loading > div:nth-child(3) {
+  animation-delay: 400ms;
+}
+.loading > div:nth-child(4) {
+  animation-delay: 600ms;
+}
+@keyframes loading {
+  0% {
+    background-position: -100px;
+  }
+  20% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    background-position: 300px;
+  }
+}
+.image-sec {
+  min-height: 184px;
+  display: block;
 }
