--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -55,16 +55,6 @@ h2 {
   font-size: 1.6rem;
   padding: 1rem 0;
 }
-a:hover {
-  color: orangered;
-}
-header nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* background: blue; */
-  width: 100%;
-}
 header a {
   color: white;
   padding: 1rem;
@@ -73,17 +63,17 @@ a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
-
   font-family: "Yellowtail", cursive;
+}
+.row.center.items,
+.product-view {
+  margin-top: 163px;
 }
 .row.center {
   justify-content: center;
 }
 img {
   border-radius: 0.5rem;
-}
-header.page-size {
-  width: 100%;
 }
 .page-size {
   max-width: 1280px;
