--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -55,6 +55,14 @@ h2 {
   font-size: 1.6rem;
   padding: 1rem 0;
 }
+.item-name {
+  margin-left: 9px !important;
+  display: block;
+  cursor: pointer;
+  & h2 {
+    text-transform: capitalize;
+  }
+}
 header a {
   color: white;
   padding: 1rem;
@@ -259,6 +267,12 @@ span.badge {
 .image-sec {
   min-height: 184px;
   display: block;
+  cursor: pointer;
+  transition: 200ms ease-in-out;
+  &:hover {
+    // transform: scale(1.1);
+    filter: grayscale(0.8);
+  }
 }
 .fading {
   opacity: 0;
@@ -272,20 +286,72 @@ span.badge {
     opacity: 1;
   }
 }
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #fff0;
+}
+::-webkit-scrollbar-thumb {
+  width: 4px;
+  background-color: #ffcbcb;
+}
+::-webkit-scrollbar-button {
+  width: 4px;
+  background-color: #f000;
+}
 .product-view {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: fixed;
+  z-index: 1;
+  background: #000c;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(3px);
+  right: 0;
+  bottom: 0;
+  margin-top: 0;
 }
 .product-view .item {
   display: flex;
   justify-content: center;
   max-width: 1080px;
   border-radius: 10px;
+  overflow-y: scroll;
+  max-height: 89vh;
   box-shadow: 2px 5px 9px 1px #00000030;
 }
 .product-view .right {
   padding: 0 24px;
+  & div.title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    & h3 {
+      padding: 0;
+      margin: 0;
+    }
+    & p {
+      margin-left: 5px;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      display: flex;
+      margin: 0;
+      font-size: 18px;
+      background: #ff00a324;
+      align-items: center;
+      justify-content: center;
+      transition: background 200ms ease-in;
+      cursor: pointer;
+      &:hover {
+        background: #ff00a34d;
+      }
+    }
+  }
 }
 
 .product-view .right .item {
@@ -323,16 +389,18 @@ span.badge {
   margin: 5px;
 }
 .add-to-cart {
-  background: #533784 !important;
+  background: #673ab7 !important;
   border: none;
   outline: none;
   color: #ffffff;
   font-weight: bold;
-  margin: 10px 0;
+  margin: 10px 0 !important;
   font-family: "Quicksand", sans-serif;
   letter-spacing: 1px;
   cursor: pointer;
   transition: 200ms;
+  height: 50px;
+  width: 203px;
 }
 .add-to-cart:hover {
   filter: brightness(120%);
@@ -395,4 +463,24 @@ span.badge {
 }
 .danger {
   color: #ca0045 !important;
+}
+.qty {
+  display: flex !important;
+  width: 163px;
+  height: 27px;
+  align-items: center;
+  justify-content: space-between;
+  background: #3f51b514 !important;
+  & button {
+    width: 100%;
+    height: 34px;
+    border: none;
+    font-size: 16px;
+    background: none;
+    cursor: pointer;
+  }
+  & p {
+    padding: 0 12px;
+    font-size: 18px;
+  }
 }
