--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -49,3 +49,39 @@ header {
     margin-right: 5px;
   }
 }
+.search-bar {
+  background: #0000008f;
+  width: 42%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  border-radius: 42px;
+  & i {
+    font-size: 30px;
+    margin-right: 14px;
+    color: #f1f1f1cc;
+  }
+  &:hover > i {
+    color: white;
+  }
+  & input {
+    width: 90%;
+    height: 100%;
+    background: none;
+    border: none;
+    padding: 0 13px;
+    font-size: 18px;
+    color: white;
+    &::placeholder {
+      color: rgb(179, 179, 179);
+    }
+  }
+}
+input {
+  outline: none;
+  &:focus {
+    outline: none;
+  }
+}
