--- a/frontend/src/styles/forms.scss
+++ b/frontend/src/styles/forms.scss
@@ -69,4 +69,15 @@
       color: #e91e63;
     }
   }
+  &.shipping-form {
+    max-width: 760px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    box-shadow: 1px 3px 7px 1px #00000045;
+    & input[type="submit"] {
+      width: 60%;
+      border-radius: 3px;
+      height: 48px;
+    }
+  }
 }
