--- a/frontend/src/styles/checkout.scss
+++ b/frontend/src/styles/checkout.scss
@@ -34,7 +34,7 @@
   }
   & .wrapper {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     & .left,
     & .right {
       padding: 5px;
