--- a/frontend/src/styles/checkout.scss
+++ b/frontend/src/styles/checkout.scss
@@ -81,6 +81,7 @@
       margin: 10px 0;
       border-bottom: 1px solid #0000ff21;
       padding-bottom: 7px;
+
       & img {
         margin-right: 10px;
         width: 100px;
@@ -118,6 +119,9 @@
       text-align: left;
       min-width: 246px;
       margin-top: 20px;
+      & .placeorder-btn {
+        cursor: pointer;
+      }
       & .title {
         margin: 0;
         margin-bottom: 4px !important;
@@ -174,7 +178,7 @@
     }
     & i {
       color: #f44336;
-      background: #fff;
+      background: rgb(255, 255, 255);
       height: 25px;
       width: 25px;
       display: flex;
