--- a/frontend/src/styles/cart.scss
+++ b/frontend/src/styles/cart.scss
@@ -150,3 +150,42 @@
     }
   }
 }
+.pay-btns {
+  margin-left: 70px !important;
+  &.normal {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+    & .b1 {
+      width: 189px;
+      display: inline-block;
+      padding: 0 8px;
+      text-align: left;
+    }
+  }
+  & button {
+    width: 100%;
+    padding: 11px;
+    background: #ffc107;
+    color: #000;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    font-family: quicksands;
+    cursor: pointer;
+    width: 200px;
+    border: 1px solid #0000003d;
+  }
+  & span {
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+  }
+  & i {
+    margin-right: 5px;
+    font-size: 34px;
+  }
+}
