--- a/frontend/src/styles/forms.scss
+++ b/frontend/src/styles/forms.scss
@@ -14,6 +14,11 @@
     font-weight: bold;
     margin: 12px;
   }
+  & .sub-title {
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
   & input[type="text"],
   & input[type="password"] {
     padding: 10px;
