--- a/frontend/src/styles/cart.scss
+++ b/frontend/src/styles/cart.scss
@@ -132,12 +132,23 @@
   }
   .sort-btn {
     width: 100%;
+    display: flex;
+    align-items: center;
+
     & button {
       border: none;
       background: none;
-      margin: 0 6px;
       cursor: pointer;
       transition: 200ms;
+      display: flex;
+      margin: 0 8px;
+      flex-direction: column;
+      align-items: center;
+      & span {
+        font-size: 12px;
+        text-align: center;
+        font-weight: bold;
+      }
       &:hover {
         color: #e91e63;
       }
@@ -151,7 +162,8 @@
   }
 }
 .pay-btns {
-  margin-left: 70px !important;
+  margin-left: 44px !important;
+  display: inline-block;
   &.normal {
     margin: auto;
     display: flex;
@@ -174,7 +186,6 @@
     border: none;
     border-radius: 4px;
     font-weight: bold;
-    font-family: quicksands;
     cursor: pointer;
     width: 200px;
     border: 1px solid #0000003d;
@@ -187,5 +198,33 @@
   & i {
     margin-right: 5px;
     font-size: 34px;
+  }
+}
+
+.order-history .cart-view {
+  & .sort-btn {
+    width: unset;
+  }
+  display: flex;
+  align-items: center;
+  background: #2196f317;
+  padding: 10px 28px;
+  border-radius: 54px;
+  justify-content: space-between;
+  margin: 14px auto;
+  width: 92%;
+  & .oh-title {
+    font-weight: bold;
+  }
+  & .oh-user {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    text-transform: capitalize;
+    & i {
+      font-size: 29px;
+      margin: 0 9px;
+      color: #2f2f2f;
+    }
   }
 }
