--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -15,17 +15,41 @@ body {
 #root {
   height: 100%;
 }
-.grid-container {
-  display: grid;
-  grid-template-areas: "header" "main" "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 5rem;
-  height: 100vh;
+button,
+textarea {
+  font-family: quicksands;
+}
+.container {
+  min-width: 600px;
+  min-height: 200px;
+  background: white;
+  border-radius: 4px;
+  padding: 5px;
+  box-shadow: 2px 3px 13px 0px #00000026;
+  margin-top: -100px !important;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-areas: "header" "bg" "main" "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 5rem 1fr 1fr 5rem;
+  height: 100vh;
+}
+.bg-image {
+  height: 443px;
+  width: 100%;
+  background: blue;
+  overflow: hidden;
+  margin-top: -52px;
+  & img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
 header {
   grid-area: header;
-  background-color: #203040;
 }
 .loading-spinner {
   width: 35px;
@@ -48,12 +72,11 @@ header {
 main {
   grid-area: main;
   padding: 1rem;
-  z-index: 1;
-  margin-top: 158px;
+  margin-top: -148px;
 }
 footer {
   grid-area: footer;
-  background: #203040;
+  background: #000;
   color: #ffffff;
 }
 .row {
@@ -98,9 +121,7 @@ img {
   margin: auto;
 }
 img.medium {
-  max-width: 29rem;
   width: 100%;
-  max-height: 300px;
   height: 100%;
   object-fit: cover;
 }
@@ -250,7 +271,7 @@ span.badge {
   }
 }
 .image-sec {
-  min-height: 184px;
+  height: 332px;
   display: block;
   cursor: pointer;
   transition: 200ms ease-in-out;
@@ -501,4 +522,8 @@ span.badge {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.btn-disabled {
+  background: #404044 !important;
+  color: #aaaac5 !important;
 }
