--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -1,11 +1,9 @@
 header {
-  height: 350px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 0 0 10px 10px;
-  overflow: hidden;
-
+  z-index: 1;
   & a.brand {
     color: #ffffff;
     font-size: 3rem;
@@ -20,7 +18,7 @@ header {
   & nav {
     display: flex;
     justify-content: space-between;
-    background: #00000017;
+    // background: #00000017;
     width: 100%;
     height: 100%;
     backdrop-filter: blur(3px);
@@ -138,6 +136,7 @@ header {
   overflow: hidden;
   border-radius: 42px;
   margin-top: 9px;
+  border: 1px solid #ff57224f;
   & i {
     font-size: 30px;
     margin-right: 14px;
